tests/baselines/reference/arrayOfSubtypeIsAssignableToReadonlyArray.errors.txt
tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts(13,1): error TS2322: Type 'A[]' is not assignable to type 'readonly B[]'.
  Property 'b' is missing in type 'A' but required in type 'B'.
tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts(18,1): error TS2322: Type 'C<A>' is not assignable to type 'readonly B[]'.
  Types of property 'concat' are incompatible.
    Type '{ (...items: ConcatArray<A>[]): A[]; (...items: (A | ConcatArray<A>)[]): A[]; }' is not assignable to type '{ (...items: ConcatArray<B>[]): B[]; (...items: (B | ConcatArray<B>)[]): B[]; }'.
      Type 'A[]' is not assignable to type 'B[]'.
        Type 'A' is not assignable to type 'B'.


==== tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts (2 errors) ====
    class A { a }
    class B extends A { b }
    class C<T> extends Array<T> { c }
    declare var ara: A[];
    declare var arb: B[];
    declare var cra: C<A>;
    declare var crb: C<B>;
    declare var rra: ReadonlyArray<A>;
    declare var rrb: ReadonlyArray<B>;
    rra = ara;
    rrb = arb; // OK, Array<B> is assignable to ReadonlyArray<A>
    rra = arb;
    rrb = ara; // error: 'A' is not assignable to 'B'
    ~~~
!!! error TS2322: Type '{|A|0|}[]' is not assignable to type 'readonly {|B|1|}[]'.
!!! error TS2322:   Property 'b' is missing in type '{|A|2|}' but required in type '{|B|3|}'.
!!! related TS2728 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:2:21: 'b' is declared here.
!!! annotated symbol 0 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:1:7
!!! annotated symbol 1 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:2:7
!!! annotated symbol 2 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:1:7
!!! annotated symbol 3 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:2:7
    
    rra = cra;
    rra = crb; // OK, C<B> is assignable to ReadonlyArray<A>
    rrb = crb;
    rrb = cra; // error: 'A' is not assignable to 'B'
    ~~~
!!! error TS2322: Type '{|C|0|}<{|A|1|}>' is not assignable to type 'readonly {|B|2|}[]'.
!!! error TS2322:   Types of property 'concat' are incompatible.
!!! error TS2322:     Type '{ (...items: {|ConcatArray|3|}<{|A|4|}>[]): {|A|5|}[]; (...items: ({|A|6|} | {|ConcatArray|7|}<{|A|8|}>)[]): {|A|9|}[]; }' is not assignable to type '{ (...items: {|ConcatArray|10|}<{|B|11|}>[]): {|B|12|}[]; (...items: ({|B|13|} | {|ConcatArray|14|}<{|B|15|}>)[]): {|B|16|}[]; }'.
!!! error TS2322:       Type '{|A|17|}[]' is not assignable to type '{|B|18|}[]'.
!!! error TS2322:         Type '{|A|19|}' is not assignable to type '{|B|20|}'.
!!! annotated symbol 0 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:3:7
!!! annotated symbol 1 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:1:7
!!! annotated symbol 2 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:2:7
!!! annotated symbol 3 /.ts/lib.es5.d.ts:1198:11
!!! annotated symbol 4 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:1:7
!!! annotated symbol 5 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:1:7
!!! annotated symbol 6 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:1:7
!!! annotated symbol 7 /.ts/lib.es5.d.ts:1198:11
!!! annotated symbol 8 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:1:7
!!! annotated symbol 9 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:1:7
!!! annotated symbol 10 /.ts/lib.es5.d.ts:1198:11
!!! annotated symbol 11 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:2:7
!!! annotated symbol 12 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:2:7
!!! annotated symbol 13 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:2:7
!!! annotated symbol 14 /.ts/lib.es5.d.ts:1198:11
!!! annotated symbol 15 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:2:7
!!! annotated symbol 16 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:2:7
!!! annotated symbol 17 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:1:7
!!! annotated symbol 18 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:2:7
!!! annotated symbol 19 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:1:7
!!! annotated symbol 20 tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.ts:2:7
    